--- a/my-resume/src/index.css
+++ b/my-resume/src/index.css
@@ -6,9 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #fafafa;
-  overflow: hidden;
+  overflow-x: hidden;
   /* Olichon, A. (2019, June 2). Black Sand Dunes · Free Stock Photo. Pexels; Pexels. https://www.pexels.com/photo/black-sand-dunes-2387793/ */
-  background: url('./assets/images/bg2.jpeg');
+  background: url('./assets/images/backgroundimage.jpeg');
   background-size: 100%;
 }
 
